--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light barranav fixed-top">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="index.html">
                 <img src="img/ico/negativo 64.ico" alt="CPB">
               </a>
 
