--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
     </header>
 
     <main>
+      <section class="container-fluid seccion1">
+        <div class="container">
+
+        </div>
+
+      </section>
+
     </main>
 
     <footer>
