--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-    <header>
+    <!--<header>
         <nav class="navbar navbar-expand-lg navbar-light barranav fixed-top">
             <div class="container">
               <a class="navbar-brand" href="index.html">
@@ -52,7 +52,7 @@
               </div>
             </div>
           </nav>
-    </header>
+    </header>-->
 
     <main>
       <section class="container-fluid seccion1">
