--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>-->
 
     <main>
-      <section class="container-fluid seccion1">
+      <section class="seccion1">
         <div class="container">
 
         </div>
