--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-    <!--<header>
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light barranav fixed-top">
             <div class="container">
               <a class="navbar-brand" href="index.html">
@@ -52,14 +52,35 @@
               </div>
             </div>
           </nav>
-    </header>-->
+    </header>
 
     <main>
-      <section class="seccion1">
+      <section class="container-fluid seccion1 d-flex align-items-end ">
         <div class="container">
-
+          <div class="row justify-content-around">
+            <div class="col-lg-7 col-md-8 col-sm-4 justify-content-center pb-5" >
+              <p style="text-align: center;">CRIS</p>
+              <img  class="center" src="img/ico/negativo 128.ico" alt="cpb icono">
+            </div>
+          </div>
         </div>
-
+      </section>
+    
+      <section class="container py-5" style="text-align:center;">
+          <h2>Un poco de mi</h2>
+          <div class="row justify-content-center pt-3">
+            <div class="col-lg-8 col-md-4 col-sm-4">
+              <p>
+                Actualmente soy estudiante de artes digitales, pero desde muy pequeña
+                siempre me he sentido atraida por la fotografía,  y ahora que estoy estudiando
+                la universida mi mayor campo de interes es el mismo, la fotografía.
+              </p>
+              <p>
+                Ahora, en la universidad, mi mayor interes, es mi efoque profecional. En 
+                esta página podras ver un poco más de mis trabajos.
+              </p>
+            </div>
+          </div>
       </section>
 
     </main>
