--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
 <body>
 
     <header>
-
     <section class="position-fixed" style="top: 15px; left: 15px;">
       <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#MenuTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars"></i></button>
       <!--menu desplegable-->
       <div class="offcanvas offcanvas-top" tabindex="-1" id="MenuTop" aria-labelledby="offcanvasTopLabel">
-    <!--offcanvas herder-->
-    <div class="offcanvas-header">
-    <h5 id="offcanvasTopLabel" >MENU</h5>
-    <button type="button" class="btn-close text-reset btn-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
+        <!--offcanvas herder-->
+        <div class="offcanvas-header textohednav">
+        <h5 id="offcanvasTopLabel" >MENU</h5>
+        <button type="button" class="btn-close text-reset btn-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
 
-  <!--barra de navegacion-->
-  <div class="offcanvas-body barranav">
+        <!--barra de navegacion-->
+        <div class="offcanvas-body barranav">
     
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
@@ -67,11 +66,9 @@
       </div>
     </nav>
 
-  </div>
+        </div>
       </div>
     </section>
-
-
     </header>
 
     <main>
