--- a/proyectos.html
+++ b/proyectos.html
@@ -23,36 +23,62 @@
 </head>
 <body>
 
-<header>
-        <nav class="navbar navbar-expand-lg navbar-light barranav fixed-top">
-            <div class="container">
-              <a class="navbar-brand" href="index.html">
-                <img src="img/ico/negativo 64.ico" alt="CPB">
-              </a>
+  <header>
+    <section class="position-fixed" style="top: 15px; left: 15px;">
+      <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#MenuTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars"></i></button>
+      <!--menu desplegable-->
+      <div class="offcanvas offcanvas-top" tabindex="-1" id="MenuTop" aria-labelledby="offcanvasTopLabel">
+        <!--offcanvas herder-->
+        <div class="offcanvas-header textohednav">
+        <h5 id="offcanvasTopLabel" >MENU</h5>
+        <button type="button" class="btn-close text-reset btn-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+        <!--barra de navegacion-->
+        <div class="offcanvas-body barranav">
+    
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="img/ico/negativo 64.ico" alt="CPB">
+        </a>
 
-              <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link text-white" aria-current="page" href="index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="galeria.html">Galeria</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="proyectos.html"><strong>Proyectos</strong></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="servicios.html">Servicos</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-</header>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link text-white" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="galeria.html">Galeria</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="proyectos.html"><strong>Proyectos</strong></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="servicios.html">Servicos</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+        </div>
+      </div>
+    </section>
+  </header>
+
+  <main>
+  </main>
+
+  <footer>
+  </footer>
+  
+  <!--Boostrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
