--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         </div>
       </section>
     
-      <section class="container py-5" style="text-align:center;">
-          <h2>Un poco de mi</h2>
+      <section class="container py-5 seccion2" style="text-align:center;">
+          <h2>UN POCO DE MI</h2>
           <div class="row justify-content-center pt-3">
             <div class="col-lg-8 col-md-4 col-sm-4">
               <p>
@@ -99,6 +99,56 @@
               </p>
             </div>
           </div>
+      </section>
+
+      <section class="container py-5 seccion2" style="text-align: center;">
+        <h2>MI TIPO DE FOTOGRAFÍA</h2>
+        <div class="row pt-5">
+
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="img/index/1.png" class="card-img-top" alt="autoretrato" width="100%">
+              <div class="card-body">
+                <h5 class="card-title">Autorretrato</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="img/index/2.png" class="card-img-top" alt="autoretrato" width="100%">
+              <div class="card-body">
+                <h5 class="card-title">Retrato social</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="img/index/3.png" class="card-img-top" alt="autoretrato" width="100%">
+              <div class="card-body">
+                <h5 class="card-title">Retrato infantil</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
+              <img src="img/index/4.png" class="card-img-top" alt="autoretrato" width="100%">
+              <div class="card-body">
+                <h5 class="card-title">Retrato fine art</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
     </main>
