--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
     <header>
-    <section class="position-fixed" style="top: 15px; left: 15px;">
+    <section class="position-fixed" style="top: 15px; left: 15px; z-index: 5;">
       <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#MenuTop" aria-controls="offcanvasTop"><i class="fa-solid fa-bars"></i></button>
       <!--menu desplegable-->
       <div class="offcanvas offcanvas-top" tabindex="-1" id="MenuTop" aria-labelledby="offcanvasTopLabel">
