--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </header>
 
     <main>
+      <!--foto inicial-->
       <section class="container-fluid seccion1 d-flex align-items-end ">
         <div class="container">
           <div class="row justify-content-around">
@@ -83,7 +84,7 @@
           </div>
         </div>
       </section>
-    
+      <!--presentacion-->
       <section class="container py-5 seccion2" style="text-align:center;">
           <h2>UN POCO DE MI</h2>
           <div class="row justify-content-center pt-3">
@@ -100,18 +101,21 @@
             </div>
           </div>
       </section>
-
+      <!--mi tipo de fotografia-->
       <section class="container py-5 seccion2" style="text-align: center;">
         <h2>MI TIPO DE FOTOGRAFÍA</h2>
-        <div class="row pt-5">
+        <div class="row pt-5 ">
 
-          <div class="col-lg-3">
+          <div class="col-lg-3 ">
             <div class="card" style="width: 18rem;">
               <img src="img/index/1.png" class="card-img-top" alt="autoretrato" width="100%">
               <div class="card-body">
                 <h5 class="card-title">Autorretrato</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">
+                  A lo largo de la carrera he experimentado con distinas
+                  técnicas, y en ganeral las pruebo conmigo misma.
+                </p>
+                <a href="#" class="boton">Ver más</a>
               </div>
             </div>
           </div>
@@ -121,8 +125,11 @@
               <img src="img/index/2.png" class="card-img-top" alt="autoretrato" width="100%">
               <div class="card-body">
                 <h5 class="card-title">Retrato social</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">
+                  El retrato social, es lo que nos permite congelar, emociones
+                  recuerdos, sentimientos y así son eternos.
+                </p>
+                <a href="#" class="boton">Ver más</a>
               </div>
             </div>
           </div>
@@ -132,8 +139,12 @@
               <img src="img/index/3.png" class="card-img-top" alt="autoretrato" width="100%">
               <div class="card-body">
                 <h5 class="card-title">Retrato infantil</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">
+                 Al trabajar con niños, algo de lo más escencial
+                 es la rapidez, para que el niño no se despere y
+                 la foto sea buena. 
+                </p>
+                <a href="#" class="boton">Ver más</a>
               </div>
             </div>
           </div>
@@ -143,14 +154,49 @@
               <img src="img/index/4.png" class="card-img-top" alt="autoretrato" width="100%">
               <div class="card-body">
                 <h5 class="card-title">Retrato fine art</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">
+                 Si bien, el retrato fine art no es conceptual
+                 eso no lo limita a la experimentacion  y a la belleza visual.
+                </p>
+                <a href="#" class="boton">Ver más</a>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <!--testimonios-->
+      <section class="container py-5 seccion2" style="text-align: center;">
+        <h2>EXPERIENCIAS</h2>
+        <!--carrusel-->
+        <div id="carruselEx" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <div class="row">
+                <div class="col-lg-4">
+                  <img src="img/index/infantil2.jpg" alt="joaquin">
+                </div>
+                <div class="col-lg-8">
 
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="..." class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="..." class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carruselEx" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carruselEx" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
     </main>
 
     <footer>
