--- a/index.html
+++ b/index.html
@@ -136,6 +136,20 @@
 
           <div class="col-lg-3">
             <div class="card" style="width: 18rem;">
+              <img src="img/index/4.png" class="card-img-top" alt="autoretrato" width="100%">
+              <div class="card-body">
+                <h5 class="card-title">Retrato fine art</h5>
+                <p class="card-text">
+                 Si bien, el retrato fine art no es conceptual
+                 eso no lo limita a la experimentacion  y a la belleza visual.
+                </p>
+                <a href="#" class="boton">Ver más</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="card" style="width: 18rem;">
               <img src="img/index/3.png" class="card-img-top" alt="autoretrato" width="100%">
               <div class="card-body">
                 <h5 class="card-title">Retrato infantil</h5>
@@ -149,42 +163,39 @@
             </div>
           </div>
 
-          <div class="col-lg-3">
-            <div class="card" style="width: 18rem;">
-              <img src="img/index/4.png" class="card-img-top" alt="autoretrato" width="100%">
-              <div class="card-body">
-                <h5 class="card-title">Retrato fine art</h5>
-                <p class="card-text">
-                 Si bien, el retrato fine art no es conceptual
-                 eso no lo limita a la experimentacion  y a la belleza visual.
-                </p>
-                <a href="#" class="boton">Ver más</a>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
       <!--testimonios-->
       <section class="container py-5 seccion2" style="text-align: center;">
         <h2>EXPERIENCIAS</h2>
         <!--carrusel-->
-        <div id="carruselEx" class="carousel slide" data-bs-ride="carousel">
+        <div id="carruselEx" class="carousel slide py-5" data-bs-ride="carousel">
           <div class="carousel-inner">
+
             <div class="carousel-item active" data-bs-interval="10000">
-              <div class="row">
+              <div class="row align-items-center">
                 <div class="col-lg-4">
-                  <img src="img/index/infantil2.jpg" alt="joaquin">
+                  <img src="img/index/infantil2.jpg" alt="joaquin" width="100%">
                 </div>
                 <div class="col-lg-8">
-
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet autem eos explicabo laborum dicta, numquam eaque consectetur ea suscipit? Voluptatibus, provident adipisci. Odit ratione ducimus rerum. Velit tempora iste vel?
+                  </p>
                 </div>
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
+
+            <div class="carousel-item" data-bs-interval="10000">
+              <div class="row align-items-center">
+                <div class="col-lg-4">
+                  <img src="img/index/sam2.jpg" alt="joaquin" width="100%">
+                </div>
+                <div class="col-lg-8">
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet autem eos explicabo laborum dicta, numquam eaque consectetur ea suscipit? Voluptatibus, provident adipisci. Odit ratione ducimus rerum. Velit tempora iste vel?
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carruselEx" data-bs-slide="prev">
@@ -195,6 +206,84 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
+        </div>
+      </section>
+      <!--Un paquete para ti-->
+      <section class="container py-5 seccion2" style="text-align: center;">
+        <h2>UN PAQUETE PARA TI</h2>
+        <div class="row">
+          <!--Retrato infantil-->
+          <div class="col-lg-4">
+            <img src="img/paquetes/Retrato infantil.png" alt="Paquete infantil" width="100%">
+            <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalRI">
+             Ver más
+            </button>
+          </div>
+            <!--modal 1-->
+          <div class="modal fade" id="modalRI" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                 <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                 </div>
+              <div class="modal-body">
+                ...
+            </div>
+          <div class="modal-footer">
+          <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+          </div>
+          </div>
+          </div>
+          <!--Retrato fine art-->
+          <div class="col-lg-4">
+            <img src="img/paquetes/retrato fine art.png" alt="Paquete infantil" width="100%">
+            <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalRFA">
+             Ver más
+            </button>
+          </div>
+            <!--modal 2-->
+          <div class="modal fade" id="modalRFA" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                 <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                 </div>
+              <div class="modal-body">
+                ...
+            </div>
+          <div class="modal-footer">
+          <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+          </div>
+          </div>
+          </div>
+          <!--Retrato Social-->
+          <div class="col-lg-4">
+            <img src="img/paquetes/Retrato social.png" alt="Paquete infantil" width="100%">
+            <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalRS">
+             Ver más
+            </button>
+          </div>
+            <!--modal 3-->
+          <div class="modal fade" id="modalRS" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                 <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                 </div>
+              <div class="modal-body">
+                ...
+            </div>
+          <div class="modal-footer">
+          <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+          </div>
+          </div>
+          </div>
         </div>
       </section>
     </main>
