--- a/galeria.html
+++ b/galeria.html
@@ -75,7 +75,41 @@
   <main>
   </main>
 
-  <footer>
+  <footer class="text-center">
+    <div class="container-fluid footer text-white py-5">
+       <div class="row">
+         <div class="col-lg-4">
+           <h3>
+             Personaliza tu sesión
+           </h3>
+           <h5>
+             contáctame
+           </h5>
+           <a href="mailto:crispispics@hotmail.com">crispispics@hotmail.com</a>
+         </div>
+  
+         <div class="col-lg-4">
+           <h3>
+            Un poco más
+           </h3>
+          <dl>
+            <dt><a href="galeria.html">Galeria</a></dt>
+            <dt><a href="proyectos.html">Proyectos</a></dt>
+            <dt><a href="servicios.html">Servicios</a></dt>
+          </dl>
+  
+         </div>
+  
+          <div class="col-lg-4 d-flex justify-content-around align-self-center" style="font-size: 3rem;">
+          <a href="https://www.facebook.com/cristi.pb.5/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://twitter.com/BuenoPompa" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.instagram.com/cristipb_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+  
+       </div>
+       
+    </div>
+    <h6 class="footer1 py-2"><a href="mailto:crispispics@hotmail.com">CRIS</a>|2022</h6>
   </footer>
   
 <!--Boostrap-->
