--- a/index.html
+++ b/index.html
@@ -104,63 +104,57 @@
       <!--mi tipo de fotografia-->
       <section class="container py-5 seccion2" style="text-align: center;">
         <h2>MI TIPO DE FOTOGRAFÍA</h2>
-        <div class="row pt-5 ">
+        <div class="row pt-5">
 
-          <div class="col-lg-3 ">
-            <div class="card" style="width: 18rem;">
-              <img src="img/index/1.png" class="card-img-top" alt="autoretrato" width="100%">
+          <div class="col-lg-3">
+              <img src="img/index/1.png" class="" alt="autoretrato" width="100%">
               <div class="card-body">
-                <h5 class="card-title">Autorretrato</h5>
-                <p class="card-text">
+                <h5>Autorretrato</h5>
+                <p>
                   A lo largo de la carrera he experimentado con distinas
                   técnicas, y en ganeral las pruebo conmigo misma.
                 </p>
                 <a href="#" class="boton">Ver más</a>
               </div>
-            </div>
           </div>
 
           <div class="col-lg-3">
-            <div class="card" style="width: 18rem;">
-              <img src="img/index/2.png" class="card-img-top" alt="autoretrato" width="100%">
+           
+              <img src="img/index/2.png" class="" alt="autoretrato" width="100%">
               <div class="card-body">
-                <h5 class="card-title">Retrato social</h5>
-                <p class="card-text">
+                <h5>Retrato social</h5>
+                <p>
                   El retrato social, es lo que nos permite congelar, emociones
                   recuerdos, sentimientos y así son eternos.
                 </p>
                 <a href="#" class="boton">Ver más</a>
               </div>
-            </div>
+            
           </div>
 
           <div class="col-lg-3">
-            <div class="card" style="width: 18rem;">
-              <img src="img/index/4.png" class="card-img-top" alt="autoretrato" width="100%">
+              <img src="img/index/4.png" class="" alt="autoretrato" width="100%">
               <div class="card-body">
-                <h5 class="card-title">Retrato fine art</h5>
-                <p class="card-text">
+                <h5>Retrato fine art</h5>
+                <p>
                  Si bien, el retrato fine art no es conceptual
                  eso no lo limita a la experimentacion  y a la belleza visual.
                 </p>
                 <a href="#" class="boton">Ver más</a>
               </div>
-            </div>
           </div>
 
           <div class="col-lg-3">
-            <div class="card" style="width: 18rem;">
               <img src="img/index/3.png" class="card-img-top" alt="autoretrato" width="100%">
               <div class="card-body">
-                <h5 class="card-title">Retrato infantil</h5>
-                <p class="card-text">
+                <h5>Retrato infantil</h5>
+                <p>
                  Al trabajar con niños, algo de lo más escencial
                  es la rapidez, para que el niño no se despere y
                  la foto sea buena. 
                 </p>
                 <a href="#" class="boton">Ver más</a>
               </div>
-            </div>
           </div>
 
         </div>
