--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button type="button" class="btn-close text-reset btn-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
 
-        <!--barra de navegacion-->
+        <!--barra de navegacion -->
       <div class="offcanvas-body barranav">
     
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -66,9 +66,36 @@
         </div>
         </div>
         </nav>
-
       </div>
+   
+<!-- experimento
+    <div class="offcanvas-body barranav">
+    
+      <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+      <a class="" href="index.html">
+        <img src="img/ico/negativo 64.ico" alt="CPB">
+      </a>
+        <ul class="navbar-nav ">
+          <li class="nav-item">
+            <a class="nav-link text-white" aria-current="page" href="index.html"><strong>Inicio</strong></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="galeria.html">Galeria</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="proyectos.html">Proyectos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="servicios.html">Servicos</a>
+          </li>
+        </ul>
+      </div>
+      </nav>
     </div>
+    </div>
+
+  -->
     </section>
     </header>
 
