--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h2>MI TIPO DE FOTOGRAFÍA</h2>
         <div class="row pt-5">
 
-          <div class="col-lg-3">
+          <div class="col-lg-3" style="justify-self: unset;">
               <img src="img/index/1.png" class="" alt="autoretrato" width="100%">
               <div class="card-body">
                 <h5>Autorretrato</h5>
@@ -145,7 +145,7 @@
               </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3" style="justify-self: unset;">
            
               <img src="img/index/2.png" class="" alt="autoretrato" width="100%">
               <div class="card-body">
@@ -159,7 +159,7 @@
             
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3" style="justify-self: unset;">
               <img src="img/index/4.png" class="" alt="autoretrato" width="100%">
               <div class="card-body">
                 <h5>Retrato fine art</h5>
@@ -171,7 +171,7 @@
               </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3" style="justify-self: unset;">
               <img src="img/index/3.png" class="card-img-top" alt="autoretrato" width="100%">
               <div class="card-body">
                 <h5>Retrato infantil</h5>
