--- a/servicios.html
+++ b/servicios.html
@@ -152,12 +152,12 @@
       </div>
     </section> 
     <!--Formulario-->
-    <section>
+    <section class="py-5 seccion2">
       <div class="container">
-        <div class="row align-items-center py-5">
-          <div class="col-lg-6">
+        <div class="row align-items-center ">
+          <div class="col-lg-6 px-3">
             <h2>CONTACTAME</h2>
-            <p>
+            <p style="text-align: justify;">
               Puede ser que no estes interesado en 
               alguno de los paquetes que ofrezco, y 
               es perfectamente valido, así como tambien puede ser
@@ -245,7 +245,8 @@
   
   <!--Boostrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+  <!--Formulario-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script> 
     $(document).ready(function(){ 
         $("#Formulario").submit(function(e) { 
