--- a/galeria.html
+++ b/galeria.html
@@ -73,6 +73,49 @@
   </header>
 
   <main>
+    <!--una pequeña descripcion-->
+    <section class="seccion2">
+      <div class="container">
+        <div class="row py-5  justify-content-center">
+          <div class="col-lg-8 col-md-4 col-sm-4">
+            <h2 style="text-align: center;">UN POCO MAS DE DETALLES</h2>
+            <p>
+              Con el paso de los años, mi fotografia a evolucionado y pasado por
+               distintas etapas, pero sin embargo, siento
+              que hay una unificacion en el estilo general de mi trabajo y aquí podras ver un poco mas 
+              de todo lo que he hecho.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Aurtorretratos-->
+    <section class="seccion2" style="text-align: center;">
+      <div class="container">
+        <div class="row pb-3">
+          <div class="col-lg-4" >
+            <img  class="py-3" src="img/galeria/auto retratos/minis/yo 1.png" alt="cris celestial 1" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#ar1">Ver en grande</button>
+          </div>
+        </div>
+
+        <!--modales ar-->
+      
+<!-- Modal -->
+<div class="modal fade" id="ar1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-body">
+       <img src="img/galeria/auto retratos/yo 1.jpg" alt="cris celestial 1" width="100%">
+      </div>
+      <div class="modal-footer">
+        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+      </div>
+    </section>
   </main>
 
   <footer class="text-center">
