--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   A lo largo de la carrera he experimentado con distinas
                   técnicas, y en ganeral las pruebo conmigo misma.
                 </p>
-                <a href="#" class="boton">Ver más</a>
+                <a href="galeria.html#AutoRetrato" class="boton">Ver más</a>
               </div>
           </div>
 
@@ -154,7 +154,7 @@
                   El retrato social, es lo que nos permite congelar, emociones
                   recuerdos, sentimientos y así son eternos.
                 </p>
-                <a href="#" class="boton">Ver más</a>
+                <a href="galeria.html#RetratoSocial" class="boton">Ver más</a>
               </div>
             
           </div>
