--- a/galeria.html
+++ b/galeria.html
@@ -573,34 +573,58 @@
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/conchis.png" alt="conchis" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs7">Ver en grande</button>
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8733.png" alt="sam4" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa7">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_4898.png" alt="los prohibidos" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs8">Ver en grande</button>
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8734.png" alt="sam5" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa8">Ver en grande</button>
           </div>
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_7384.png" alt="posadas" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs9">Ver en grande</button>
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8743.png" alt="sam6" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa9">Ver en grande</button>
           </div>
 
         </div>
 
         <div class="row pb-3 justify-content-center">
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_8437.png" alt="sergio" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs10">Ver en grande</button>
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_4477.png" alt="Gerar2" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa10">Ver en grande</button>
           </div>
 
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_5604.png" alt="Eru" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs11">Ver en grande</button>
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_4511.png" alt="Gerar3" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa11">Ver en grande</button>
           </div>
 
           <div class="col-lg-4" >
-            <img  class="py-3" src="img/galeria/foto social/minis/IMG_5613.png" alt="Gerar" width="100%">
-            <button class="boton" data-bs-toggle="modal" data-bs-target="#rs12">Ver en grande</button>
+            <img  class="py-3" src="img/galeria/retratos/minis/vaso.png" alt="Beto1" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa12">Ver en grande</button>
+          </div>
+        </div>
+
+        <div class="row pb-3 justify-content-center">
+          <div class="col-lg-4" >
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8783.png" alt="Clau1" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa13">Ver en grande</button>
+          </div>
+
+          <div class="col-lg-4" >
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8786.png" alt="Clau2" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa14">Ver en grande</button>
+          </div>
+
+          <div class="col-lg-4" >
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_8632. edit.png" alt="Beto2" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa15">Ver en grande</button>
+          </div>
+        </div>
+
+        <div class="row pb-3 justify-content-center">
+          <div class="col-lg-4" >
+            <img  class="py-3" src="img/galeria/retratos/minis/IMG_7417.png" alt="Chato2" width="100%">
+            <button class="boton" data-bs-toggle="modal" data-bs-target="#fa16">Ver en grande</button>
           </div>
         </div>
         <!--modales fa-->
@@ -694,7 +718,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/conchis.jpg" alt="conchis" width="100%">
+       <img src="img/galeria/retratos/IMG_8733.jpg" alt="sam4" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -708,7 +732,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_4898.jpg" alt=" los prohibidos" width="100%">
+       <img src="img/galeria/retratos/IMG_8734.jpg" alt="sam5" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -722,7 +746,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_7384.jpg" alt="posadas" width="100%">
+       <img src="img/galeria/retratos/IMG_8743.jpg" alt="sam6" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -736,7 +760,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_8437.jpg" alt="Sergio" width="100%">
+       <img src="img/galeria/retratos/IMG_4477.jpg" alt="Gerar2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -750,7 +774,7 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_5604.jpg" alt="Eru" width="100%">
+       <img src="img/galeria/retratos/IMG_4511.jpg" alt="Gerar3" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
@@ -759,12 +783,68 @@
   </div>
 </div>
 
-<!-- Moda11-->
+<!-- Moda12-->
 <div class="modal fade" id="fa12" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-body">
-       <img src="img/galeria/foto social/IMG_5613.jpg" alt="Gerar" width="100%">
+       <img src="img/galeria/retratos/vaso.jpg" alt="Beto" width="100%">
+      </div>
+      <div class="modal-footer">
+        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Moda13-->
+<div class="modal fade" id="fa13" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-body">
+       <img src="img/galeria/retratos/IMG_8783.jpg" alt="Clau1" width="100%">
+      </div>
+      <div class="modal-footer">
+        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Moda14-->
+<div class="modal fade" id="fa14" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-body">
+       <img src="img/galeria/retratos/IMG_8786.jpg" alt="Gerar3" width="100%">
+      </div>
+      <div class="modal-footer">
+        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Moda15-->
+<div class="modal fade" id="fa15" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-body">
+       <img src="img/galeria/retratos/IMG_8632. edit.jpg" alt="Beto" width="100%">
+      </div>
+      <div class="modal-footer">
+        <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Moda15-->
+<div class="modal fade" id="fa16" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-body">
+       <img src="img/galeria/retratos/IMG_7417.jpg" alt="Chato2" width="100%">
       </div>
       <div class="modal-footer">
         <button type="boton" class="boton2" data-bs-dismiss="modal">cerrar</button>
