--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                  Si bien, el retrato fine art no es conceptual
                  eso no lo limita a la experimentacion  y a la belleza visual.
                 </p>
-                <a href="#" class="boton">Ver más</a>
+                <a href="galeria.html#RetratoFineArt" class="boton">Ver más</a>
               </div>
           </div>
 
