--- a/prueba.html
+++ b/prueba.html
@@ -57,9 +57,9 @@
 
     <main>
       <!--foto inicial-->
-      <section class="container-fluid">
-          <img src="img/index/fondo2.jpg" alt="">
-      </section>
+      <div class="container-fluid seccion1">
+          <img src="img/index/fondo2.jpg" width="100%">
+      </div>
       <!--presentacion-->
       <section class="container py-5 seccion2" style="text-align:center;">
           <h2>UN POCO DE MI</h2>
