--- a/index.html
+++ b/index.html
@@ -57,16 +57,9 @@
 
     <main>
       <!--foto inicial-->
-      <section class="container-fluid seccion1 d-flex align-items-end ">
-        <div class="container">
-          <div class="row justify-content-around">
-            <div class="col-lg-7 col-md-8 col-sm-4 justify-content-center pb-5" >
-              <p style="text-align: center;">CRIS</p>
-              <img  class="center" src="img/ico/negativo 128.ico" alt="cpb icono">
-            </div>
-          </div>
-        </div>
-      </section>
+      <div class="container-fluid seccion1 py-5 my-4">
+        <img src="img/index/fondo2.jpg" width="100%">
+      </div>
       <!--presentacion-->
       <section class="container py-5 seccion2" style="text-align:center;">
           <h2>UN POCO DE MI</h2>
