--- a/proyectos.html
+++ b/proyectos.html
@@ -56,6 +56,10 @@
   </header>
 
   <main>
+    <!--foto inicial-->
+    <div class="container-fluid seccion1 py-5 my-4">
+      <img src="img/index/fondo2.jpg" width="100%">
+    </div>
     
   </main>
 
