--- a/servicios.html
+++ b/servicios.html
@@ -56,6 +56,10 @@
   </header>
 
   <main>
+    <!--foto inicial-->
+    <div class="container-fluid seccion1 py-5 my-4">
+      <img src="img/index/fondo2.jpg" width="100%">
+    </div>
     <!--Un paquete para ti-->
     <section class="container py-5 seccion2" style="text-align: center;">
       <h2>UN PAQUETE PARA TI</h2>
