--- a/proyectos.html
+++ b/proyectos.html
@@ -60,6 +60,27 @@
     <div class="container-fluid seccion1 py-5 my-4">
       <img src="img/index/fondo2.jpg" width="100%">
     </div>
+    <!--proyecto de max-->
+    <section class="container seccion2" style="text-align: center;">
+      <h2>
+        PERDERSE EN UN LUGAR CONOCIDO
+      </h2>
+      <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-4 col-sm-4">
+          <p>
+            Hace un tiempo para la materia de "temas selectos de artes digitales" con la Dra. Natalia Gurieva,
+            realicé este proyecto, para que sepas de que se trata, aquí te platico un  poco más al respecto.
+          </p>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-1 col-md-1 col-sm-1">
+          <img src="img/Perderse en un lugar conocido/paleta de colores.JPG" alt="Paleta de colores">
+        </div>
+      </div>
+     
+
+    </section>
   </main>
 
   <footer class="text-center">
