--- a/proyectos.html
+++ b/proyectos.html
@@ -99,6 +99,7 @@
       </div>
       <div class="row justify-content-center align-items-center py-3">
       <div class="col-lg-9 col-md-5 col-sm-5">
+        <h2>CONTEXTO</h2>
         <p>
              No recuerdo cuantos años tenía, pero era pequeña y estaba en la primaria, mi mamá siempre fue la
              mamá que llega tarde y yo naturalmente era la alumna que se quedaba hasta el final, en una ocasión
