--- a/proyectos.html
+++ b/proyectos.html
@@ -60,8 +60,8 @@
     <div class="container-fluid seccion1 py-5 my-4">
       <img src="img/index/fondo2.jpg" width="100%">
     </div>
-    <!--proyecto de max-->
-    <section class="container seccion2" style="text-align: center;">
+    <!--proyecto de max--> 
+    <section class="container seccion2 py-5" style="text-align: center;">
       <h2>
         PERDERSE EN UN LUGAR CONOCIDO
       </h2>
@@ -166,7 +166,13 @@
         </div>
       </div>
     </section>
-  </main>
+    <!--Des humanizarte-->
+    <section class="container seccion2 py-5" style="text-align: center;">
+      <h2>
+        DESHUMANIZARTE
+      </h2>
+    </section>
+    </main>
 
   <footer class="text-center">
     <div class="container-fluid footer text-white py-5">
