--- a/proyectos.html
+++ b/proyectos.html
@@ -74,9 +74,11 @@
         </div>
       </div>
       <div class="row justify-content-center align-items-center py-3">
-        <div class="col-lg-1 col-md-1 col-sm-1">
-          <img src="img/Perderse en un lugar conocido/paleta de colores.JPG" alt="Paleta de colores" width="50%">
+        <div class="col-lg-4 col-md-4 col-sm-2">
+          <img src="img/Perderse en un lugar conocido/paleta de colores.JPG" alt="Paleta de colores" width="100%">
         </div>
+
+      <div class="row justify-content-center align-items-center py-3">
         <div class="col-lg-9 col-md-4 col-sm-4">
           <p>
             La paleta de color, la cree en base a los acordes cromáticos de Eva Geller auque,
