--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
                 </div>
                 <div class="col-lg-8">
                   <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet autem eos explicabo laborum dicta, numquam eaque consectetur ea suscipit? Voluptatibus, provident adipisci. Odit ratione ducimus rerum. Velit tempora iste vel?
+                  JOAQUIN: Me divertí mucho y se sintio padre ser el modelo de las fotos, no me gustaban las flores,
+                  pero cuando vi la foto me gustó más.
                   </p>
                 </div>
               </div>
@@ -162,7 +163,11 @@
                 </div>
                 <div class="col-lg-8">
                   <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet autem eos explicabo laborum dicta, numquam eaque consectetur ea suscipit? Voluptatibus, provident adipisci. Odit ratione ducimus rerum. Velit tempora iste vel?
+                   SAM: 
+                  Personalmente, yo conozco a Cris desde hace mucho tiempo, y no sabia el talento que tenía para hacer fotos
+                  hasta que me pidió ser su modelo en una ocación, yo me sentí muy comoda durante el proceso, y aunque una pensaria
+                  que se puede sentir muy pesado, ella sabe como hacer las cosas para pasar un buen rato y tomar fotos increibles.
+                  Fue una experiencia super divertida, desde el maquillaje, hasta la edicion de las fotos. 
                   </p>
                 </div>
               </div>
@@ -194,12 +199,28 @@
               <div class="modal-dialog">
                  <div class="modal-content">
                     <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title seccion2" id="exampleModalLabel">Retrato Fine-art infantil</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
-              <div class="modal-body">
-                ...
-            </div>
+              <div class="modal-body seccion2">
+                <!--precios-->
+                <div class="conatiner">
+                  <div class="row justify-content-center align-items-center">
+                    <div class="col-lg-9">
+                      <h1>$750</h1>
+                      <br>
+                      <p>
+                        En este paquete cuenta con 6 fotos de hasta tres cambios de ropa y 
+                        podras hacer 3 cambios a tu gusto de la edicion.
+                        <br>
+                        El proceso es muy sencillo, una ves hechas las tomas, tendras que elegir
+                        las 6 fotos en cuestion, y una vez elegidas las fotos, tengo un tiempo de entrega
+                        de 2 semanas a un mes.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
           <div class="modal-footer">
           <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
           </div>
@@ -218,11 +239,27 @@
               <div class="modal-dialog">
                  <div class="modal-content">
                     <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Retrato Fine-art</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
               <div class="modal-body">
-                ...
+                <!--precios-->
+                <div class="conatiner">
+                  <div class="row justify-content-center align-items-center">
+                    <div class="col-lg-9">
+                      <h1>$950</h1>
+                      <br>
+                      <p>
+                        En este paquete cuenta con 6 fotos de hasta tres cambios de ropa y 
+                        podras hacer 3 cambios a tu gusto de la edicion.
+                        <br>
+                        El proceso es muy sencillo, una ves hechas las tomas, tendras que elegir
+                        las 6 fotos en cuestion, y una vez elegidas las fotos, tengo un tiempo de entrega
+                        de 2 semanas a un mes.
+                      </p>
+                    </div>
+                  </div>
+                </div>
             </div>
           <div class="modal-footer">
           <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
@@ -242,11 +279,27 @@
               <div class="modal-dialog">
                  <div class="modal-content">
                     <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title seccion2" id="exampleModalLabel">Retrato Social</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                  </div>
               <div class="modal-body">
-                ...
+               <!--precios-->
+               <div class="conatiner">
+                <div class="row justify-content-center align-items-center seccion2">
+                  <div class="col-lg-9">
+                    <h1>$1750</h1>
+                    <br>
+                    <p>
+                      En este paquete cuenta con 50 fotos con un retoque general.
+                      <br>
+                      El proceso es algo distinto, yo voy al evento en particular
+                      y estoy durante 4 horas, una ves hechas las tomas, tendras que elegir
+                      las 50 fotos en cuestion, y una vez elegidas las fotos, tengo un tiempo de entrega
+                      de 4 a 6 semanas.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           <div class="modal-footer">
           <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
