--- a/galeria.html
+++ b/galeria.html
@@ -960,6 +960,133 @@
 </div>
 
       </div>
+    
+    </section>
+    <!--Un paquete para ti-->
+    <section class="container py-5 seccion2" style="text-align: center;">
+      <h2>UN PAQUETE PARA TI</h2>
+      <div class="row">
+        <!--Retrato infantil-->
+        <div class="col-lg-4">
+          <img src="img/paquetes/Retrato infantil.png" alt="Paquete infantil" width="100%">
+          <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalRI">
+           Ver más
+          </button>
+        </div>
+          <!--modal 1-->
+        <div class="modal fade" id="modalRI" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+               <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title seccion2" id="exampleModalLabel">Retrato Fine-art infantil</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+            <div class="modal-body seccion2">
+              <!--precios-->
+              <div class="conatiner">
+                <div class="row justify-content-center align-items-center">
+                  <div class="col-lg-9">
+                    <h1>$750</h1>
+                    <br>
+                    <p>
+                      En este paquete cuenta con 6 fotos de hasta tres cambios de ropa y 
+                      podras hacer 3 cambios a tu gusto de la edicion.
+                      <br>
+                      El proceso es muy sencillo, una ves hechas las tomas, tendras que elegir
+                      las 6 fotos en cuestion, y una vez elegidas las fotos, tengo un tiempo de entrega
+                      de 2 semanas a un mes.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+        <div class="modal-footer">
+        <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+        </div>
+        </div>
+        </div>
+        <!--Retrato fine art-->
+        <div class="col-lg-4">
+          <img src="img/paquetes/retrato fine art.png" alt="Paquete infantil" width="100%">
+          <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalRFA">
+           Ver más
+          </button>
+        </div>
+          <!--modal 2-->
+        <div class="modal fade" id="modalRFA" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+               <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Retrato Fine-art</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+            <div class="modal-body">
+              <!--precios-->
+              <div class="conatiner">
+                <div class="row justify-content-center align-items-center">
+                  <div class="col-lg-9">
+                    <h1>$950</h1>
+                    <br>
+                    <p>
+                      En este paquete cuenta con 6 fotos de hasta tres cambios de ropa y 
+                      podras hacer 3 cambios a tu gusto de la edicion.
+                      <br>
+                      El proceso es muy sencillo, una ves hechas las tomas, tendras que elegir
+                      las 6 fotos en cuestion, y una vez elegidas las fotos, tengo un tiempo de entrega
+                      de 2 semanas a un mes.
+                    </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+        <div class="modal-footer">
+        <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+        </div>
+        </div>
+        </div>
+        <!--Retrato Social-->
+        <div class="col-lg-4">
+          <img src="img/paquetes/Retrato social.png" alt="Paquete infantil" width="100%">
+          <button type="button" class="boton" data-bs-toggle="modal" data-bs-target="#modalRS">
+           Ver más
+          </button>
+        </div>
+          <!--modal 3-->
+        <div class="modal fade" id="modalRS" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+               <div class="modal-content">
+                  <div class="modal-header">
+                  <h5 class="modal-title seccion2" id="exampleModalLabel">Retrato Social</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               </div>
+            <div class="modal-body">
+             <!--precios-->
+             <div class="conatiner">
+              <div class="row justify-content-center align-items-center seccion2">
+                <div class="col-lg-9">
+                  <h1>$1750</h1>
+                  <br>
+                  <p>
+                    En este paquete cuenta con 50 fotos con un retoque general.
+                    <br>
+                    El proceso es algo distinto, yo voy al evento en particular
+                    y estoy durante 4 horas, una ves hechas las tomas, tendras que elegir
+                    las 50 fotos en cuestion, y una vez elegidas las fotos, tengo un tiempo de entrega
+                    de 4 a 6 semanas.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        <div class="modal-footer">
+        <button type="button" class="boton" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+        </div>
+        </div>
+        </div>
+      </div>
     </section>
   </main>
 
