--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="col-lg-4">
                   <img src="img/index/infantil2.jpg" alt="joaquin" width="100%">
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 py-3">
                   <p>
                   JOAQUIN: Me divertí mucho y se sintio padre ser el modelo de las fotos, no me gustaban las flores,
                   pero cuando vi la foto me gustó más.
@@ -161,7 +161,7 @@
                 <div class="col-lg-4">
                   <img src="img/index/sam2.jpg" alt="joaquin" width="100%">
                 </div>
-                <div class="col-lg-8">
+                <div class="col-lg-8 py-3">
                   <p>
                    SAM: 
                   Personalmente, yo conozco a Cris desde hace mucho tiempo, y no sabia el talento que tenía para hacer fotos
